# searchine

./: .gitignore  Cargo.toml  Readme.md
documents/: Cargo.toml
documents/src/: lib.rs  read.rs
fingertips/: Cargo.toml
fingertips/src/: lib.rs  path.rs
index/: Cargo.toml
index/src/: lib.rs
index/src/collection/: col.rs  entry.rs  inverted.rs  mod.rs
index/src/doc/: freq.rs  mod.rs  term.rs
index/src/inverted/: freq.rs  mod.rs
index/src/postings/: freq.rs  mod.rs  pos.rs
index/src/score/: metrics.rs  mod.rs
loadocs/: Cargo.toml
loadocs/src/: document.rs  dtype.rs  lib.rs
query/: Cargo.toml
query/src/: lib.rs
searchine/: Cargo.toml
searchine/src/: cli.rs  config.rs  fmt.rs  main.rs  path.rs
searchine/src/cli/: collection.rs  index.rs  init.rs  mod.rs  search.rs  status.rs  utils.rs
searchine/src/commands/: create_vocabulary.rs  index.rs  index_corpus.rs  init.rs  list_corpus.rs  mod.rs  search.rs  status.rs
searchine/src/fs/: dir.rs  mod.rs
searchine/src/ui/browser/: search_page.html
src/: cli.rs  fmt.rs  main.rs  path.rs  scores.rs  types.rs  vocab.rs
src/cli/: commands.rs  mod.rs
src/commands/: create_vocabulary.rs  index.rs  index_corpus.rs  list_corpus.rs  mod.rs  search.rs  status.rs
src/fs/: blocks.rs  dir.rs  docs.rs  mod.rs
src/index/: corpus.rs  docs.rs  im.rs  mod.rs  postings.rs  spimi.rs
src/io/: mod.rs
src/postings/: freq.rs  lst.rs  mod.rs  pos.rs
src/tokenize/: mod.rs  simple.rs  vocab.rs
temp/: file2.txt
temp/.searchine/: corpus_index.json  index.json  vocabulary.json
tokenize/: Cargo.toml
(+32 files in other folders)
