[package]
name = "searchine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
xml-rs = "0.8.20"
rust-stemmers = "^1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
walkdir = "2.5.0"
tabwriter = { version = "1.4.0" }
rayon = "1.10.0"
